tests/safeHaskell/safeInfered/UnsafeInfered05.stderr

UnsafeInfered05.hs:5:1: error: [GHC-44360]
    UnsafeInfered05_A: Can't be safely imported!
    The module itself isn't safe.
