tests/safeHaskell/safeInfered/UnsafeInfered05.hs
{-# LANGUAGE Haskell2010 #-}
{-# LANGUAGE Safe #-}
module UnsafeInfered05 where

import safe UnsafeInfered05_A

g :: Int
g = f

